# automated-research-report-generation

./: .gitignore  Dockerfile  Dockerfile.jenkins  azure-deploy-jenkins.sh  build-and-push-docker-image.sh  jenkinsfile  pyproject.toml  setup-app-infrastructure.sh  users.db
research_and_analyst/api/: main.py
