[build-system]
requires = ["setuptools>=68"]         # PEP 660 editable support ke liye naya setuptools
build-backend = "setuptools.build_meta"

[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Optional: authors, license
authors = [{ name = "Konda Basireddy" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]